--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn{
+    @apply py-2 px-4 bg-orange-400 text-white font-semibold rounded-lg shadow-md hover:bg-orange-950 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  }
+
+  .customhover{
+    @apply bg-orange-400 ms-2;
+  }
