--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
     @apply py-2 px-4 bg-orange-400 text-white font-semibold rounded-lg shadow-md hover:bg-orange-950 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
 
-  .customhover{
-    @apply bg-orange-400 ms-2;
-  }
+  .inputText{
+    @apply block w-3/4 rounded-md mx-auto border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-black sm:text-sm sm:leading-6 md:w-full;
+    }
+
+    .labelText{
+      @apply  block text-sm px-16 md:p-0 font-semibold leading-6 text-gray-900;
+    }
